# OBC-deployment

./: .gitignore  CMakeLists.txt  README.md  project.cmake
.devcontainer/: Dockerfile  devcontainer.json
Components/: CMakeLists.txt
Components/Behaviors/ScienceMode/: CMakeLists.txt  ScienceMode.cpp  ScienceMode.fpp  ScienceMode.hpp
Components/Behaviors/ScienceMode/docs/: sdd.md
Components/Controllers/Adapter/: Adapter.cpp  Adapter.fpp  Adapter.hpp  CMakeLists.txt
Components/Controllers/Adapter/docs/: sdd.md
Components/Controllers/CamController/: CMakeLists.txt  CamController.cpp  CamController.fpp  CamController.hpp
Components/Controllers/CamController/docs/: sdd.md
Components/Controllers/CommController/: CMakeLists.txt  CommController.cpp  CommController.fpp  CommController.hpp
Components/Controllers/CommController/docs/: sdd.md
Components/Controllers/PacketSender/: CMakeLists.txt  PacketSender.cpp  PacketSender.fpp  PacketSender.hpp
Components/Controllers/PacketSender/docs/: sdd.md
Components/Protocols/ObcDataFramingProtocol/: CMakeLists.txt  ObcDataFramingProtocol.cpp  ObcDataFramingProtocol.hpp
Components/Structs/AdapterPorts/: AdapterPorts.fpp  CMakeLists.txt
Components/Structs/DataPacket/: CMakeLists.txt  DataPacket.fpp
Components/Structs/SubSystemEnum/: CMakeLists.txt  SubSystemEnum.fpp
Deployment/: CMakeLists.txt
Deployment/Top/: DeploymentPackets.xml  DeploymentTopology.cpp  instances.fpp  topology.fpp
curl-7.59.0/lib/: libcurl.la
curl-7.59.0/lib/pkgconfig/: libcurl.pc
openssl-1.1.1l/: Makefile  configdata.pm
